force-app/main/default/objects/Payment_Run__c/Payment_Run__c.object-meta.xml
<CustomObject>
    <label>Payment Run</label>
    <nameField>
        <displayFormat>PR{000000}</displayFormat>
        <label>Payment Run Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Payment Runs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>