force-app/main/default/objects/Payment_Run__c/fields/Bank_Supplier_Payment_Error_Log__c.field-meta.xml
<CustomField>
    <fullName>Bank_Supplier_Payment_Error_Log__c</fullName>
    <label>Bank Supplier Payment Error Log</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>