force-app/main/default/objects/Payment_Run__c/fields/Number_Of_Line_Items__c.field-meta.xml
<CustomField>
    <fullName>Number_Of_Line_Items__c</fullName>
    <label>Number Of Line Items</label>
    <summaryForeignKey>Payment_Run_Line_Item__c.Payment_Run__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>