force-app/main/default/objects/Payment_Run__c/fields/Number_Of_Remittance_Emails_Sent__c.field-meta.xml
<CustomField>
    <fullName>Number_Of_Remittance_Emails_Sent__c</fullName>
    <label>Number Of Remittance Emails Sent</label>
    <summaryFilterItems>
        <field>Payment_Run_Line_Item__c.Is_Email_Sent__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Payment_Run_Line_Item__c.Payment_Run__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>